finally aligned grids on gallery section correctly by adding display grid, grid temp column and row, grid gap and grid auto flow, all of these yielded desired result.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,3 +166,29 @@ img {
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
+
+.gallery {
+    display: grid;
+    
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    background-color: antiquewhite;
+    grid-gap: 50px;
+    grid-auto-flow: column;
+    
+}
+
+.pictures {
+    background-color: #ce7bc0;
+    width: 250px;
+    height: 200px;
+    
+   
+   
+
+}
+
+.labels {
+    background-color: darkgreen;
+
+}
